<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">只聊</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="success">登陆成功</string>
    <string name="send">发送</string>
    <string name="send_msg">发送消息</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="female">女</string>
    <string name="star">*222</string>
    <string name="delete_friend">删除好友</string>
    <string name="add_friend">添加好友</string>

    <!-- create -->
    <string name="broadcast">广播</string>
    <string name="reply">回复</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="c_password">确认密码</string>

    <!-- setting -->
    <string name="set_sound">音效</string>
    <string name="set_alert">消息提醒</string>
    <string name="set_other">辅助功能</string>
    <string name="set_about">关于只聊</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <!-- chatmessage -->
    <string name="colon"> :</string>
    <string name="to">to</string>

    <!-- edit info -->
    <string name="editinfo">编辑资料</string>

    <!-- main left menu -->
    <string name="myfollowing">我关注的</string>
    <string name="myfollower">关注我的</string>
    <string name="myinfo">个人信息</string>
    <string name="account">账户设置</string>
    <string name="setting">系统设置</string>
    <string name="logout">退出</string>
    <!-- main right menu -->
    <string name="mytags">我的tag</string>
    <string name="hottags">..tags..</string>
    <!-- add friend -->
    <string name="key">搜索关键词</string>
    <string name="upload">动态</string>
    <string name="discover">发现</string>
    <string name="followings_tag:">选择标签：</string>
    <string name="search">搜索</string>

    <!-- followings -->
    <string name="add_tag">添加标签</string>

    <!-- account -->
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="submit">提交</string>

    <!-- myInfo -->
    <string name="save">保存</string>
    <string name="right_tag">RIGHT</string>
    <string name="left_tag">LEFT</string>
    <string name="fork">创建分支</string>
    <string name="merge">合并分支</string>
    <string name="target_msg">悄悄话</string>

    <!-- chat -->
    <string name="home">主页</string>
    <string name="follow">关注</string>
    <string name="putin_msg">创建新会话</string>
    <string name="enter_text">输入内容</string>

    <!-- dialog -->
    <string name="jump">跳转到该话题</string>
    <string name="timeline">时间线</string>
    <string name="conversation">会话</string>
    <string name="forward">转发</string>
    <string name="reply_to">回复：</string>
    <string name="see_original">查看原文</string>
    <string name="user_info">个人资料</string>
    <string name="about">关于只聊</string>
    <string name="version">版本：1.0</string>
    <string name="team">只聊团队</string>
    <string name="empty">无</string>
</resources>