<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_layout"
    android:orientation="vertical"
    android:background="@drawable/bg1" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="vertical" >
        
        
        <RelativeLayout
        	android:layout_width="match_parent"
        	android:layout_height="0.5dp"
        	android:orientation="vertical"
        	android:layout_alignParentBottom="true"
        	android:background="#ddd" >
        </RelativeLayout>

        <Button
            android:id="@+id/account_ret"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/return_button" />

        <TextView
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/account"
            android:textSize="20sp"
            android:textColor="#34c29a" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/account_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/acc_icon" />

        <RelativeLayout
            android:id="@+id/acc_oldpwd"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/account_icon"
            android:layout_marginTop="60dp"
            android:background="@drawable/acc_button_bg1" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/key_icon" />

            <EditText
                android:id="@+id/account_old_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/imageView1"
                android:ems="10"
                android:textSize="18sp"
                android:hint="@string/old_pwd"
                android:background="@drawable/blank_bg"
                android:inputType="textPassword" >
            </EditText>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/acc_newpwd"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/acc_oldpwd"
            android:background="@drawable/acc_button_bg1" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/lock_icon" />

            <EditText
                android:id="@+id/account_new_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/imageView2"
                android:ems="10"
                android:textSize="18sp"
                android:background="@drawable/blank_bg"
                android:hint="@string/new_pwd"
                android:inputType="textPassword" >

            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/acc_cpwd"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/acc_newpwd"
            android:layout_centerHorizontal="true"
            
            android:background="@drawable/acc_button_bg1" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/lock_icon" />

            <EditText
                android:id="@+id/account_c_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/imageView3"
                android:ems="10"
                android:textSize="18sp"
                android:background="@drawable/blank_bg"
                android:hint="@string/c_password"
                android:inputType="textPassword" />
        </RelativeLayout>

        <Button
            android:id="@+id/account_btn_ok"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/acc_cpwd"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/acc_button_bg2"
            android:textColor="#fff"
            android:textSize="24sp"
            android:text="@string/submit" />

        <Button
            android:id="@+id/account_logout"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/account_btn_ok"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/acc_button_bg3"
            android:text="@string/logout"
            android:textColor="#34c29a"
            android:textSize="24sp" />

    </RelativeLayout>

</LinearLayout>
