<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refer_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f9f9f9"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="18dp" >

            <TextView
                android:id="@+id/refer_item_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward"
                android:textColor="@color/bg_6" />

            <TextView
                android:id="@+id/refer_item_response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/reply"
                android:textColor="@color/bg_6" />
        </LinearLayout>

        <TextView
            android:id="@+id/refer_item_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:textColor="@color/bg_5"
            android:textSize="24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/refer_item_receiver_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="5dp" >

        <TextView
            android:id="@+id/refer_item_refer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/chat_item_receiver"
            android:text="@string/reply_to"
            android:textColor="@color/bg_6"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/refer_item_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/refer_item_refer"
            android:layout_marginLeft="5dp"
            android:textColor="@color/bg_5"
            android:textSize="22dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:id="@+id/refer_item_original_sender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bg_5"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/refer_item_see_original"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/see_original"
                android:textColor="@color/bg_6"
                android:textSize="16dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/refer_item_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/bg_5"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>